generate jre on gradle task